--- a/src/IdentityServer4.EntityFramework/IdentityServer4.EntityFramework.csproj
+++ b/src/IdentityServer4.EntityFramework/IdentityServer4.EntityFramework.csproj
@@ -11,7 +11,6 @@
     <PackageProjectUrl>https://github.com/IdentityServer/IdentityServer4.EntityFramework</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/IdentityServer/IdentityServer4.EntityFramework/blob/release/LICENSE</PackageLicenseUrl>
     <VersionPrefix>2.0.0</VersionPrefix>
-    <!--<VersionSuffix>rc1</VersionSuffix>-->
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
@@ -23,11 +22,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.0.0" />
     <PackageReference Include="AutoMapper" Version="6.1.1" />
-    <PackageReference Include="SourceLink.Embed.AllSourceFiles" Version="2.2.1" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\IdentityServer4\src\IdentityServer4\IdentityServer4.csproj" />
+  </ItemGroup>
 </Project>
